[package]
name = "cs43l22"
version = "0.1.0"
authors = ["Max Ekman <max@looplab.se>"]
edition = "2018"
categories = [
    "embedded-hal",
]
description = "Driver for Cirrus Logic CS43L22 Stereo DAC with headphone amp"

[dependencies]
# byteorder = "1.3.4"

[dependencies.embedded-hal]
# TODO: Update version when I2S proposal is finalized:
# https://github.com/rust-embedded/embedded-hal/pull/204
# version = "0.2.3"
git = "https://github.com/eldruin/embedded-hal/"
branch = "i2s"
# path = "../embedded-hal"
